# smb_ethz

./: README.md
core/smb_control/config/: gazebo_control_test.yaml  localization.yaml  smb_control_bkp.yaml  smb_control_test.yaml
core/smb_control/launch/: smb_control.launch
core/smb_gazebo/launch/: simMapG.launch  smbMapG.launch  smbTel.launch  smb_gazebo.launch
core/smb_gazebo/worlds/: testWorld.world
core/smb_opc/launch/: opc.launch
hardware/smb_powerstatus/: CMakeLists.txt
hardware/smb_powerstatus/firmware/smb_powerstatus/: smb_powerstatus.h  smb_powerstatus.ino
hardware/smb_powerstatus/launch/: smb_powerstatus.launch
hardware/smb_powerstatus/msg/: SMBPowerStatus.msg
lib/libnabo/: CatkinBuild.cmake  package.xml
se/msf/: README.md  jenkins-pipeline
se/msf/msf_autoinit/: CMakeLists.txt  package.xml
se/msf/msf_autoinit/launch/: msf_autoinit.launch
se/msf/msf_autoinit/scripts/: msf_autoinit.py
se/msf/msf_core/: CMakeLists.txt  package.xml
se/msf/msf_core/include/msf_core/: msf_sensormanagerROS.h
se/msf/msf_timing/: CMakeLists.txt
se/msf/msf_updates/: package.xml
se/msf/msf_updates/include/msf_updates/pose_sensor_handler/implementation/: pose_sensorhandler.hpp
se/msf/msf_updates/include/msf_updates/position_sensor_handler/implementation/: position_sensorhandler.hpp
